# bevy-craft

./: .gitignore  Cargo.toml  README.md  bevy-craft.js  index.html
src/: atlas.rs  avian_level.rs  avian_player.rs  background.rs  biome.rs  biome_id.rs  block.rs  camera.rs  chest.rs  chunk.rs  click_shape.rs  collision.rs  craft.rs  craft_recipe.rs  enemy.rs  equipment.rs  floor.rs  framerate.rs  gravity.rs  grounded.rs  hit_test.rs  hotbar.rs  input.rs  inventory.rs  item.rs  item_attribute.rs  item_container.rs  item_details.rs  item_dragging.rs  item_id.rs  item_node.rs  item_putting.rs  item_selecting.rs  item_sorting.rs  item_stats.rs  layer.rs  level.rs  lib.rs  liquid.rs  localization.rs  (+31 more)
web/: bevy-craft.js  index.html
