[package]
name = "bevy-craft"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
iyes_perf_ui = "0.3"
avian2d = "0.1"
bevy_rapier2d = "0.27"
arrayvec = "0.7"
rand = "0.8"
rand_chacha = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
