[package]
name = "bevy-craft"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_framepace = "0.17"
iyes_perf_ui = "0.3"
arrayvec = "0.7"
rand = "0.8"
rand_chacha = "0.3"
syn = "1.0"
quote = "1.0"
web-time = "1.1"
noise = "0.9.0"
image = "0.25.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[lib]
proc-macro = true

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
